Fairly sure I have the first media query done.  I have at least fixed the max size spacing with flexbox instead of absolute positioning.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ p,
 fname,
 lname,
 subject {
-	padding-bottom: 35px;
+	padding-bottom: 5px;
 	font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
 	font-size: 16px;
 	color: #666666;
@@ -57,11 +57,12 @@ hr {
 .contentHeaderLinks {
 	font-size: 16;
 	color:grey;
+	width:33%;
 }
 
 /* Div Tags for Containers */
 .contentH1Wrap {
-	width: 300px;
+	width: 25%;
 	height: 80px;
 	background-color: #4aaaa5;
 	display: flex;
@@ -71,7 +72,6 @@ hr {
 .contentHeaderLinkWrap {
 	width: 300px;
 	height: 80px;
-	position:absolute;
 	right: 0px;
 	bottom: 0px;
 	line-height:80px;
@@ -91,14 +91,15 @@ header {
 	width: 960px;
 	margin:auto;
 	position:relative;
+	display: flex;
+	justify-content: space-between;
+	height: auto;
 }
 
 .contentMain {
 	width: 650px;
 	background-color:#ffffff;
 	margin: 15px 0 180px 0;
-	position: relative;
-	top: 0;
 	padding-top: 10;
 	border: 1px solid #dddddd;
 	
@@ -108,15 +109,13 @@ header {
 	width: 270px;
 	height:175px;
 	background-color: #ffffff;
-	position: absolute;
-	right: 0;
-	top: 0;
 	vertical-align: 90px;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	border: 1px solid #dddddd;
+	margin-top: 15px;
 
 }
 
@@ -133,11 +132,9 @@ footer {
 	background-color: #666666;
 	border-top: 6px solid #4aaaa5; 
 	height: 100px;
-	position: absolute;
-	bottom: 0px;
 	text-align: center;
 	color: lightgrey;
-	margin-top: 100px;
+	margin-top: 10px;
 	display: flex;
 	justify-content: space-around;
 }
@@ -213,7 +210,7 @@ footer {
 .imageSelfie {
 	max-width: 35%;
 	float: left;
-	padding: 0px 10px 10pxpx 10px;
+	padding: 0px 10px 10px 0px;
 }
 
 .imageIcons {
@@ -250,4 +247,53 @@ input[type=submit] {
 	font-size: 16px;
 	color: #666666;
 	letter-spacing: 1px;
+}
+
+
+
+@media screen and (max-width: 980px) {
+	body,
+	header,
+	section,
+	.contentSidebar,
+	.contentWidth,
+	.contentHeaderLinkWrap,
+	.contentH1Wrap,
+	footer,
+	p,
+	h2,
+	.iconWrap
+	 {
+		width: 100%;
+		display: block;
+		height: auto;
+		padding: 0px;
+	}
+
+	.contentHeaderLinkWrap,
+	.contentH1Wrap{
+		line-height: 0px;
+		text-align: center;
+		padding: 10px 0px 10px 0px;
+	}
+
+.contentMain {
+	width:98%;
+	margin: 0px;
+	margin-left: 3px;
+}
+
+.contentMain, {
+padding: 0px 5px 0px 5px;
+margin: 0px 5px 0px 5px;
+}
+
+	header {
+		position: static;
+	}
+
+	p {
+		padding: 5px;
+	}
+
 }
